# qtaim_embed

./: .gitignore  CITATION.cff  CLAUDE.md  MIGRATION_GUIDE.md  README.md  env.yml  pyproject.toml  setup.py
docs/plans/: 2026-02-05-refactor-dgl-to-pyg-migration-plan-v2.md
docs/research/: optimizer-template.py
docs/solutions/: README.md
docs/todos/: 004-done-p1-xai-dgl-on-pyg-objects.md  027-done-p3-fused-optimizer-missing.md
env/: environment.yml
experiments/profiling/: profile_test.py
profiling/: analyze_results.py  benchmark_multigpu.py  create_config_c.py  create_configs.py  create_heavy_configs.py  profile_data_pipeline.py  test_fused_optimizer.py  test_fused_optimizer_simple.py
qtaim_embed/: __init__.py  _pymatgen_compat.py
qtaim_embed/core/: __init__.py  datamodule.py  dataset.py  molwrapper.py
qtaim_embed/data/: dataloader.py  featurizer.py  geometry_to_graph.py  grapher.py  lmdb.py  molwrapper.py  parallel_utils.py  processing.py  transforms.py  xai.py
qtaim_embed/models/: initializers.py  layers.py  layers_homo.py  utils.py
qtaim_embed/models/full_predictor/: __init__.py  full.py
qtaim_embed/models/graph_level/: base_gcn.py  base_gcn_classifier.py
qtaim_embed/models/link_pred/: link_model.py  losses.py
qtaim_embed/models/node_level/: base_gcn.py  base_gnn.py
qtaim_embed/notebooks/: baseline_embed.ipynb  deepchem.ipynb  difference_graph.ipynb
qtaim_embed/scripts/: __init__.py
qtaim_embed/scripts/helpers/: __init__.py  db2pkl_classifier.py  mol2lmdb.py  mol2lmdb_classifier.py  mol2lmdb_node.py  settings_classifier_actinides.json  settings_classifier_non_actinides.json  split_lmdb.py
qtaim_embed/scripts/notebooks/: baseline_data_handling.ipynb  baseline_embed.ipynb  dataset_splits.ipynb  dataset_viz.ipynb  deepchem_ref.ipynb  dimenet_dev.ipynb  energy_correction.ipynb  manual_test.ipynb  (+9 more)
qtaim_embed/utils/: data.py  dataset.py  descriptors.py  files.py  grapher.py  models.py  scalers.py  tests.py  translation.py
tests/: conftest.py  scratch.ipynb  test_cli_entry_points.py  test_core.py  test_descriptors.py  test_featurizers.py  test_full_predictor.py  test_geometry_to_graph.py  test_grapher.py  test_layers.py  test_link_models.py  test_lmdb.py  test_lmdb_link.py  test_lmdb_node.py  test_models.py  test_multi_gpu_batchnorm.py  test_node_models.py  test_numerical.py  test_scalers.py  test_split_lmdb.py  test_stats.py  test_transforms.py
tests/data/: labelled_data.pkl  labelled_spin_charge.pkl  low_train_50.pkl  qm8_invalid.pkl  qm8_test.pkl  test_classifier_labelled.pkl
(+85 files in other folders)
